--- a/PizzaExpress/PizzaExpress/Views/Produto/Index.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Produto/Index.cshtml
@@ -6,46 +6,31 @@
 
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.IdProduto)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NomeProduto)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DescProduto)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PrecoProduto)
-        </th>
-        <th></th>
-    </tr>
+<div>
+    @using (Ajax.BeginForm("Index", "Produto", new AjaxOptions { HttpMethod = "GET", InsertionMode = InsertionMode.Replace, UpdateTargetId = "divlistaprodutos", OnFailure = "handleError" }))
+    {
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.IdProduto)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NomeProduto)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DescProduto)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PrecoProduto)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { item.IdProduto }) |
-            @Html.ActionLink("Details", "Details", new { item.IdProduto }) |
-            @Html.ActionLink("Delete", "Delete", new { item.IdProduto })
-        </td>
-    </tr>
+        <div class="container" id="containerprocurarcliente">
+            <div class="form-inline">
+                <div class="row">
+                    <h2>Cliente</h2>
+                    <div>
+                        <input type="text" maxlength="180" name="pesquisar" placeholder="Pesquisar" class="procurarbotao" />
+                        <button type="submit" value="pesquisar" class="procurar">Pesquisar Cliente</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    }
+
+</div>
+@Html.Partial("ProcurarProduto", Model)
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
+
+
+
 }
-
-</table>
