--- a/PizzaExpress/PizzaExpress/Views/Produto/Index.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Produto/Index.cshtml
@@ -21,7 +21,7 @@
                         </div>
                        <div class="form-group">
                           
-                               <input type="submit" class="btn btn-group" />
+                               <input type="submit"  />
                                
                            </div>
                           
