--- a/PizzaExpress/PizzaExpress/Views/Cliente/Index.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Cliente/Index.cshtml
@@ -2,7 +2,7 @@
 
 
 <div>
-    @using (Ajax.BeginForm("Index", "Cliente", new AjaxOptions { HttpMethod = "GET", InsertionMode = InsertionMode.Replace, UpdateTargetId = "divlistaclientes",OnFailure = "handleError" }))
+    @using (Ajax.BeginForm("Index", "Pizza", new AjaxOptions { HttpMethod = "GET", InsertionMode = InsertionMode.Replace, UpdateTargetId = "divlistaclientes",OnFailure = "handleError" }))
     {
 
         <div class="container" id="containerprocurarcliente">
@@ -10,7 +10,8 @@
             <div class="row">
                 <h2>Cliente</h2>
                 <div>
-                    <input type="text"  maxlength="180" name="pesquisar" placeholder="Pesquisar" class="procurarbotao"/>
+                   
+                    <input type="text" maxlength="180" name="pesquisar" placeholder="Pesquisar" class="procurarbotao" />
                     <button type="submit" value="pesquisar" class="procurar">Pesquisar Cliente</button>
                 </div>
             </div>
@@ -27,5 +28,5 @@
    @Scripts.Render("~/bundles/jqueryval")
     
 
-</script>
+
    }
