--- a/PizzaExpress/PizzaExpress/Views/Pedido/Create.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Pedido/Create.cshtml
@@ -34,21 +34,23 @@
            <label class="control-label col-md-2"> Sabor 1</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ObjPizza.Sabores[0].NomeSabor, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.TextBoxFor(model => model.ObjPizza.Sabores[0].IdSabor)
+                @Html.HiddenFor(model => model.ObjPizza.Sabores[0].IdSabor)
                 @Html.ValidationMessageFor(model => model.ObjPizza.Sabores[0].IdSabor, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-md-2"> Sabor 2</label>
             <div class="col-md-10">
-                <input type="text" name="Sabor2" class="form-control" />
+                @Html.EditorFor(model => model.ObjPizza.Sabores[1].NomeSabor, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.HiddenFor(model => model.ObjPizza.Sabores[1].IdSabor)
                 @Html.ValidationMessageFor(model => model.ObjPizza.Sabores[1].IdSabor, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             <label class="control-label col-md-2"> Sabor 3</label>
             <div class="col-md-10">
-                <input type="text" name="Sabor3" class="form-control" />
+                @Html.EditorFor(model => model.ObjPizza.Sabores[2].NomeSabor, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.HiddenFor(model => model.ObjPizza.Sabores[2].IdSabor)
                 @Html.ValidationMessageFor(model => model.ObjPizza.Sabores[2], "", new { @class = "text-danger" })
             </div>
         </div>
@@ -56,6 +58,7 @@
             <label class="control-label col-md-2">Produto</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ObjProduto.NomeProduto, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.HiddenFor(model => model.ObjProduto.IdProduto)
                 @Html.ValidationMessageFor(model => model.ObjProduto.NomeProduto, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -88,14 +91,6 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.DataPedido, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DataPedido, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ValorTotal, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ValorTotal, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ValorTotal, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -156,7 +151,7 @@
                     })
                 },
                 messages: {
-                    noResults: "", results: ""
+                    noResults: "Não foi Encontrado", results: ""
                 }
             });
         })
@@ -164,30 +159,39 @@
 </script>
 <script>
     $(document).ready(function () {
-        $("Sabor2").autocomplete({
+        $("input[name='ObjPizza.Sabores[1].NomeSabor'").autocomplete({
             source: function (request, response) {
                 $.ajax({
                     url: "/Pedido/BuscarSabor",
                     type: "POST",
+                     
                     dataType: "json",
                     data: { term: request.term },
                     success: function (data) {
                         response($.map(data, function (item) {
-                            return { label: item.Label, value : item.Value  };
+                            $("input[name='ObjPizza.Sabores[1].IdSabor'").val(item.Value);
+                            return { label: item.Label, item: item.Value };
                         }))
 
+                    },
+                    select: function (event, ui) {
+                        alert(ui.item.Name);
+                        return false;
                     }
+                    
                 })
             },
+            
             messages: {
                 noResults: "", results: ""
             }
+
         });
     })
     </script>
 <script>
         $(document).ready(function () {
-            $("Sabor3").autocomplete({
+            $("input[name='ObjPizza.Sabores[2].NomeSabor'").autocomplete({
                 source: function (request, response) {
                     $.ajax({
                         url: "/Pedido/BuscarSabor",
@@ -196,7 +200,32 @@
                         data: { term: request.term },
                         success: function (data) {
                             response($.map(data, function (item) {
-                                return { label: item.Label, value : item.Value };
+                                $("input[name='ObjPizza.Sabores[2].IdSabor'").val(item.Value);
+                                return { label: item.Label};
+                            }))
+
+                        }
+                    })
+                },
+                messages: {
+                    noResults: "", results: ""
+                }
+            });
+        })
+</script>
+<script>
+        $(document).ready(function () {
+            $("input[name='ObjProduto.NomeProduto']").autocomplete({
+                source: function (request, response) {
+                    $.ajax({
+                        url: "/Pedido/BuscarProduto",
+                        type: "POST",
+                        dataType: "json",
+                        data: { term: request.term },
+                        success: function (data) {
+                            response($.map(data, function (item) {
+                                $("input[name='ObjProduto.IdProduto']").val(item.Value);
+                                return { label: item.Label, Value: item.Name };
                             }))
 
                         }
