--- a/PizzaExpress/PizzaExpress/Views/Pedido/Create.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Pedido/Create.cshtml
@@ -166,6 +166,7 @@
                     type: "POST",
                      
                     dataType: "json",
+                    
                     data: { term: request.term },
                     success: function (data) {
                         response($.map(data, function (item) {
@@ -190,6 +191,7 @@
     })
     </script>
 <script>
+    var nome;
         $(document).ready(function () {
             $("input[name='ObjPizza.Sabores[2].NomeSabor'").autocomplete({
                 source: function (request, response) {
@@ -200,12 +202,17 @@
                         data: { term: request.term },
                         success: function (data) {
                             response($.map(data, function (item) {
-                                $("input[name='ObjPizza.Sabores[2].IdSabor'").val(item.Value);
-                                return { label: item.Label};
+                                return { label: item.Label, value: item.Name, Id: item.Value };
                             }))
 
                         }
                     })
+                },
+                select: function (e, ui) {
+                    $("input[name='ObjPizza.Sabores[2].IdSabor'").val(ui.item.Id);
+                    
+                    
+                    
                 },
                 messages: {
                     noResults: "", results: ""
