--- a/PizzaExpress/PizzaExpress/Views/Cliente/Index.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Cliente/Index.cshtml
@@ -2,7 +2,7 @@
 
 
 <div>
-    @using (Ajax.BeginForm("Index", "Pizza", new AjaxOptions { HttpMethod = "GET", InsertionMode = InsertionMode.Replace, UpdateTargetId = "divlistaclientes",OnFailure = "handleError" }))
+    @using (Ajax.BeginForm("Index", "Cliente", new AjaxOptions { HttpMethod = "GET", InsertionMode = InsertionMode.Replace, UpdateTargetId = "divlistaclientes",OnFailure = "handleError" }))
     {
 
         <div class="container" id="containerprocurarcliente">
