--- a/PizzaExpress/PizzaExpress/Views/Produto/Index.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Produto/Index.cshtml
@@ -13,25 +13,21 @@
         <section id="containerprocurarcliente">
             <form class="form-inline">
                 
-                    <h2>Cliente</h2>
-                    <div class="form-group">
+                    <h2>Produto</h2>
+                    <div>
                         <div class="col-md-10">
-                            <input type="text" class="form-control" />
+                            <input type="text" class="form-control" name="pesquisar" placeholder="Digite o nome do Produto" />
                             </div>
+                        <input type="submit" class="btn" value="Buscar" />
                         </div>
-                       <div class="form-group">
-                          
-                               <input type="submit"  />
-                               
-                           </div>
-                          
+                    
                        
               
                        
                
            
         </form>
-            <input type="submit" class="btn" />
+           
             </section>
 
     }
