--- a/PizzaExpress/PizzaExpress/Views/Sabor/Index.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Sabor/Index.cshtml
@@ -5,15 +5,22 @@
     {
 
         <div class="container" id="containerprocurarcliente">
-            <div class="form-inline">
-                <div class="row">
-                    <h2>Sabor</h2>
-                    <div>
-                        <input type="text" maxlength="180" name="pesquisar" placeholder="Pesquisar" class="procurarbotao" />
-                        <button type="submit" value="pesquisar" class="procurar">Pesquisar Cliente</button>
+            <form class="form-inline">
+
+                <h2>Sabor</h2>
+                <div>
+                    <div class="col-md-10">
+                        <input type="text" class="form-control" name="pesquisar" placeholder="Digite o nome do Sabor" />
                     </div>
+                    <input type="submit" class="btn" value="Buscar" />
                 </div>
-            </div>
+
+
+
+
+
+
+            </form>
         </div>
 
 
