--- a/PizzaExpress/PizzaExpress/Views/Cliente/Index.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Cliente/Index.cshtml
@@ -4,18 +4,24 @@
 <div>
     @using (Ajax.BeginForm("Index", "Cliente", new AjaxOptions { HttpMethod = "GET", InsertionMode = InsertionMode.Replace, UpdateTargetId = "divlistaclientes",OnFailure = "handleError" }))
     {
-
+        
         <div class="container" id="containerprocurarcliente">
-            <div class="form-inline">
-            <div class="row">
+            <form class="form-inline">
+
                 <h2>Cliente</h2>
                 <div>
-                   
-                    <input type="text" maxlength="180" name="pesquisar" placeholder="Pesquisar" class="procurarbotao" />
-                    <button type="submit" value="pesquisar" class="procurar">Pesquisar Cliente</button>
+                    <div class="col-md-10">
+                        <input type="text" class="form-control" name="pesquisar" placeholder="Digite o nome do Cliente" />
+                    </div>
+                    <input type="submit" class="btn" value="Buscar" />
                 </div>
-            </div>
-                </div>
+
+
+
+
+
+
+            </form>
         </div>
 
 
