--- a/PizzaExpress/PizzaExpress/Views/Pedido/Create.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Pedido/Create.cshtml
@@ -63,6 +63,14 @@
             </div>
         </div>
         <div class="form-group">
+            <label class="control-label col-md-2">Cliente</label>
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ObjCliente.NomeCliente, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.HiddenFor(model => model.ObjCliente.IdCliente)
+                @Html.ValidationMessageFor(model => model.ObjCliente.NomeCliente, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
             @Html.LabelFor(model => model.NumPedido, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.NumPedido, new { htmlAttributes = new { @class = "form-control" } })
