--- a/PizzaExpress/PizzaExpress/Views/Pedido/Create.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Pedido/Create.cshtml
@@ -88,6 +88,8 @@
     UpdateTargetId = "ListaPizzaAdicionadas"
 }))
 {
+    <h4>Pizza</h4>
+    <hr />
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
     <div class="form-horizontal">
