--- a/PizzaExpress/PizzaExpress/Views/Account/Register.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Account/Register.cshtml
@@ -18,6 +18,13 @@
         </div>
     </div>
     <div class="form-group">
+        @Html.LabelFor(m => m.Setor, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.DropDownListFor(m => m.Setor, new List<SelectListItem> { new SelectListItem { Text = "Atendimento", Value = "Atendimento" } }, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.Setor, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group">
         @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
