--- a/PizzaExpress/PizzaExpress/Views/Pedido/Index.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Pedido/Index.cshtml
@@ -1,8 +1,81 @@
-﻿@model  IEnumerable<PizzaExpress.Models.Pedido>
+﻿@model IEnumerable<PizzaExpress.Models.Pedido>
 
-@{
-    ViewBag.Title = "Index";
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Usuario)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.NumPedido)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DescPedido)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DataPedido)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ValorTotal)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.StatusPedido)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.TipoPedido)
+        </th>
+        <th>
+            Sabor 1
+        </th>
+        <th>
+            Sabor 2
+        </th>
+        <th>
+            Sabor 3
+        </th>
+        <th></th>
+    </tr>
+
+@foreach (var item in Model) {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Usuario)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.NumPedido)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.DescPedido)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.DataPedido)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ValorTotal)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.StatusPedido)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.TipoPedido)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ObjPizza.Sabores[0]);
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ObjPizza.Sabores[1]);
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ObjPizza.Sabores[2]);
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+        </td>
+    </tr>
 }
 
-<h2>Index</h2>
-
+</table>
