--- a/PizzaExpress/PizzaExpress/Views/Pedido/ProcurarPedido.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Pedido/ProcurarPedido.cshtml
@@ -1,27 +1,18 @@
 ﻿@model IEnumerable<PizzaExpress.Models.Pedido>
-
-@{
-    ViewBag.Title = "ProcurarPedido";
-}
-
-<h2>ProcurarPedido</h2>
-
+<div id="divlistapedidos">
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
+            @Html.DisplayNameFor(model => model.ObjCliente)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.NumPedido)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.DescPedido)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.HoraPedido)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DataPedido)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.ValorTotal)
@@ -30,40 +21,54 @@
             @Html.DisplayNameFor(model => model.StatusPedido)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.TipoPedido)
+            Sabor 1
+        </th>
+        <th>
+            Sabor 2
+        </th>
+        <th>
+            Sabor 3
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.NumPedido)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DescPedido)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.HoraPedido)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DataPedido)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ValorTotal)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.StatusPedido)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TipoPedido)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+           
+            <td>
+                @Html.DisplayFor(modelItem => item.ObjCliente.Nome)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NumPedido)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DescPedido)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ValorTotal)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.StatusPedido)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ObjPizza.ObjListaSabor1.DescSabor);
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ObjPizza.ObjListaSabor2.DescSabor);
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ObjPizza.ObjListSabor3.DescSabor);
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.NumPedido }) |
+                @Html.ActionLink("Details", "Details", new { id = item.NumPedido }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.NumPedido })
+                @Html.ActionLink("Pizza", "Details", "Pizza", new { id = item.ObjPizza.IdPizza })
+                @Html.ActionLink("Produto", "Details", "Produto", new { id = item.ObjProduto.IdProduto })
+            </td>
+        </tr>
+    }
 
 </table>
+</div>
