--- a/PizzaExpress/PizzaExpress/Views/Pedido/Create.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Pedido/Create.cshtml
@@ -49,18 +49,12 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.StatusPedido, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(model => model.StatusPedido,new List<SelectListItem> { new SelectListItem { Text="Aberto",Value="Aberto"}, new SelectListItem { Text = "Fechado", Value = "Fechado" } })
-               @Html.ValidationMessageFor(model => model.StatusPedido, "", new { @class = "text-danger" })
-            </div>
-        </div>
+       
 
         <div class="form-group">
             @Html.LabelFor(model => model.TipoPedido, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.TipoPedido, new List<SelectListItem>() { new SelectListItem() { Text = "Urgente", Value = "Urgente" } } ,new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.TipoPedido, new List<SelectListItem>() { new SelectListItem() { Text = "Urgente", Value = "Urgente" }, new SelectListItem() { Text = "Normal", Value = "Normal" }}, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.TipoPedido, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -94,7 +88,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ObjPizza.Tamanho, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input type="text" name="ObjPizza.Tamanho" class="form-control" />
+                
+                @Html.DropDownListFor(model => model.ObjPizza.Tamanho, new List<SelectListItem>() { new SelectListItem() { Text = "G", Value = "G" }, new SelectListItem() { Text = "M", Value = "M" }, new SelectListItem() { Text = "P", Value = "P" } }, new { @class = "form-control" })
                        @Html.ValidationMessageFor(model => model.ObjPizza.Tamanho, "", new { @class = "text-danger" })
             </div>
         </div>
