--- a/PizzaExpress/PizzaExpress/Views/Pedido/Index.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Pedido/Index.cshtml
@@ -20,7 +20,7 @@
                 <div>
                     <div class="col-md-10">
                       
-                        <input type="text" class="form-control" name="pesquisar" placeholder="Digite o nome do Cliente" />
+                        <input type="text" class="form-control" name="pesquisar" placeholder="Digite o nome do número do pedido" />
                     </div>
                     <input type="submit" class="btn" value="Buscar" />
                 </div>
