--- a/PizzaExpress/PizzaExpress/Views/Produto/Index.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Produto/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Produto</h2>
 
 
     @using (Ajax.BeginForm("Index", "Produto", new AjaxOptions { HttpMethod = "GET", InsertionMode = InsertionMode.Replace, UpdateTargetId = "divlistaprodutos", OnFailure = "handleError" }))
