--- a/PizzaExpress/PizzaExpress/Views/Cliente/ProcurarCliente.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Cliente/ProcurarCliente.cshtml
@@ -7,7 +7,7 @@
 
 <div id="divlistaclientes">
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Cadastrar novo cliente", "Create")
 </p>
 <table class="table">
     <tr>
@@ -55,9 +55,9 @@
             @Html.DisplayFor(modelItem => item.Numero)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new {  id=item.IdCliente  }) 
-            @Html.ActionLink("Details", "Details", new {  id=item.IdCliente  }) 
-            @Html.ActionLink("Delete", "Delete", new {  id=item.IdCliente})
+            @Html.ActionLink("Editar", "Edit", new {  id=item.IdCliente  }) 
+            @Html.ActionLink("Detalhes", "Details", new {  id=item.IdCliente  }) 
+            @Html.ActionLink("Deletar", "Delete", new {  id=item.IdCliente})
         </td>
     </tr>
 }
