--- a/PizzaExpress/PizzaExpress/Views/Cliente/Delete.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Cliente/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model PizzaExpress.Models.Cliente
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Deletar";
 }
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Você tem certeza que deseja excluir?</h3>
 <div>
     <h4>Cliente</h4>
     <hr />
@@ -66,7 +66,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Pesquisar Cliente", "Index")
         </div>
     }
 </div>
