--- a/PizzaExpress/PizzaExpress/Views/Cliente/Edit.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Cliente/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PizzaExpress.Models.Cliente
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Editar";
 }
 
 <h2>Edit</h2>
@@ -66,7 +66,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Pesquisar Cliente", "Index")
 </div>
 
 @section Scripts {
