Ajuste Formulários do Cliente
- Tradução do value dos input tipo botão

--- a/PizzaExpress/PizzaExpress/Views/Cliente/Delete.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Cliente/Delete.cshtml
@@ -65,7 +65,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Deletar" class="btn btn-default" /> |
             @Html.ActionLink("Pesquisar Cliente", "Index")
         </div>
     }
