Ajuste formulário Cliente, Sabor e Produto
- Ajuste nos Data-Annotation das classes Cliente, Sabor e Produto
- Tradução nas Views Produto e Sabor

--- a/PizzaExpress/PizzaExpress/Views/Produto/Create.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Produto/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model PizzaExpress.Models.Produto
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Cadastrar";
 }
 
-<h2>Create</h2>
+<h2>Cadastrar</h2>
 
 @using (Html.BeginForm()) 
 {
@@ -44,7 +44,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Cadastrar" class="btn btn-default" />
             </div>
         </div>
  </div>
@@ -52,5 +52,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Pesquisar Cliente", "Index")
 </div>
