--- a/PizzaExpress/PizzaExpress/Views/Sabor/Details.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Sabor/Details.cshtml
@@ -39,6 +39,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new {  id = Model.IdSabor  }) |
+    @Html.ActionLink("Pesquisar", "Index")
 </p>
