--- a/PizzaExpress/PizzaExpress/Views/Produto/Delete.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Produto/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model PizzaExpress.Models.Produto
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Deletar";
 }
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Você tem certeza que deseja excluir?</h3>
 <div>
     <h4>Produto</h4>
     <hr />
@@ -49,8 +49,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions">
-            <input type="submit" value="Delete"/>
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Deletar"/>
+            @Html.ActionLink("Pesquisar Cliente", "Index")
         </div>
     }
 </div>
