--- a/PizzaExpress/PizzaExpress/Views/Sabor/Delete.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Sabor/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model PizzaExpress.Models.Sabor
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Deletar";
 }
 
-<h2>Delete</h2>
+<h2>Deletar</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Você tem certeza que deseja excluir?</h3>
 <div>
     <h4>Sabor</h4>
     <hr />
@@ -49,8 +49,8 @@
         @Html.AntiForgeryToken()
         <div class="form-group">
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Deletar" class="btn"/> |
+            @Html.ActionLink("Pesquisar Sabor", "Index")
         </div>
             </div>
     }
