--- a/PizzaExpress/PizzaExpress/Views/Sabor/Edit.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Sabor/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model PizzaExpress.Models.Sabor
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Editar";
 }
 
-<h2>Edit</h2>
+<h2>Editar</h2>
 
 @using (Html.BeginForm())
 {
@@ -48,12 +48,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Salvar" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Pesquisar Sabor", "Index")
 </div>
