--- a/PizzaExpress/PizzaExpress/Views/Produto/Details.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Produto/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PizzaExpress.Models.Produto
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalhes";
 }
 
 <h2>Details</h2>
@@ -45,6 +45,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new {  id = Model.IdProduto}) 
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new {  id = Model.IdProduto}) 
+    @Html.ActionLink("Pesquisar Cliente", "Index")
 </p>
