--- a/PizzaExpress/PizzaExpress/Views/Produto/Edit.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Produto/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PizzaExpress.Models.Produto
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Editar";
 }
 
 <h2>Edit</h2>
@@ -55,5 +55,5 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Pesquisar Cliente", "Index")
 </div>
