--- a/PizzaExpress/PizzaExpress/Views/Produto/ProcurarProduto.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Produto/ProcurarProduto.cshtml
@@ -2,7 +2,7 @@
 
 <div id="divlistaprodutos">
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Cadastrar novo produto", "Create")
 </p>
 <table class="table">
     <tr>
