--- a/PizzaExpress/PizzaExpress/Views/Pedido/Create.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Pedido/Create.cshtml
@@ -93,20 +93,12 @@
                        @Html.ValidationMessageFor(model => model.ObjPizza.Tamanho, "", new { @class = "text-danger" })
             </div>
         </div>
-       
-        <div class="form-group">
-            @Html.LabelFor(model => model.ObjPizza.PrecoPizza, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <input type="text" name="ObjPizza.PrecoPizza" class="form-control" />
-                @Html.ValidationMessageFor(model => model.ObjPizza.PrecoPizza, "", new { @class = "text-danger" })
-            </div>
-        </div>
         <div class="form-group">
             <label class="control-label col-md-2"> Sabor 1</label>
             <div class="col-md-10">
                 <input type="text" name="ObjPizza.Sabores[0].NomeSabor" class="form-control" />
                 <input type="hidden" name="ObjPizza.Sabores[0].IdSabor" class="form-control"/>
-                @Html.ValidationMessageFor(model => model.ObjPizza.Sabores[0].IdSabor, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.ObjPizza.Sabores[0].NomeSabor, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
@@ -114,7 +106,7 @@
             <div class="col-md-10">
                 <input type="text" name="ObjPizza.Sabores[1].NomeSabor" class="form-control"  />
                 <input type="hidden" name="ObjPizza.Sabores[1].IdSabor" class="form-control"  />
-               
+                @Html.ValidationMessageFor(model => model.ObjPizza.Sabores[1].IdSabor, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
@@ -122,7 +114,7 @@
             <div class="col-md-10">
                 <input type="text" name="ObjPizza.Sabores[2].NomeSabor" class="form-control"  />
                 <input type="hidden" name="ObjPizza.Sabores[2].IdSabor" class="form-control"  />
-                
+                @Html.ValidationMessageFor(model => model.ObjPizza.Sabores[2].IdSabor, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
