--- a/PizzaExpress/PizzaExpress/Views/Sabor/Create.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Sabor/Create.cshtml
@@ -35,6 +35,19 @@
                 @Html.ValidationMessageFor(model => model.PrecoSabor, "", new { @class = "text-danger" })
             </div>
         </div>
+        <div class="form-group">
+            <label class="control-label col-md-2">Produto</label>
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ObjProduto.NomeProduto, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ObjProduto.NomeProduto, "", new { @class = "text-danger" })
+                <br>
+                <input type="text" name="ObjProduto.DescProduto" class="form-control" readonly="readonly" />
+
+                <input type="hidden" name="ObjProduto.IdProduto" />
+
+            </div>
+        </div>
+
         
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
