--- a/PizzaExpress/PizzaExpress/Views/Cliente/Index.cshtml
+++ b/PizzaExpress/PizzaExpress/Views/Cliente/Index.cshtml
@@ -31,7 +31,10 @@
 @Html.Partial("ProcurarCliente",Model)
 @section scripts
 {
+   @Scripts.Render("~/bundles/jquery")
    @Scripts.Render("~/bundles/jqueryval")
+  @Scripts.Render("~/ bundles / scripsdoprojeto")
+
     
 
 
